fix(admin): fix admin page access and role-based access control
- Fix health check URL in AdminLayout.astro: use API_BASE_URL instead of
  relative path /api/health which was hitting Astro dev server (404)
- Fix dashboard stats API URL in admin/index.astro: same relative path issue
- Add role-based menu filtering: admin sees all menus, blogger sees limited
  menus (no users/settings/mail)
- Add role-based page access control with redirect: blogger accessing
  admin-only pages gets redirected to /admin
- Add role access map and redirect map for consistent role handling
- Fix CORS configuration in backend: read allowed-origins from application.yml
  instead of hardcoded values, add more dev ports (4322, 127.0.0.1)
- Fix mermaid import error in [slug].astro: use window.mermaid instead of
  dynamic import from CDN URL
- Fix unused variables: add window assignments for onclick handlers,
  remove unused isBackendReachable function
- Fix deprecated substr usage: replace with substring
- Remove TypeScript type annotations from define:vars scripts